force-app/main/default/objects/Contact/fields/Sex_Assigned_At_Birth__c.field-meta.xml
<CustomField>
    <fullName>Sex_Assigned_At_Birth__c</fullName>
    <label>Sex Assigned at Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>