force-app/main/default/objects/Contact/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <inlineHelpText>Enter SSN with dashes (ex: XXX-XX-XXXX)</inlineHelpText>
    <label>Social Security Number</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>