force-app/main/default/objects/Contact/fields/Social_Security_or_Other_Payments__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_or_Other_Payments__c</fullName>
    <label>Social Security or Other Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>