force-app/main/default/objects/Contact/fields/Supervisor_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor Clearance</label>
    <type>Checkbox</type>
</CustomField>