force-app/main/default/objects/Contact/fields/Supervisor_Clearances__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Clearances__c</fullName>
    <label>Supervisor Clearances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>