force-app/main/default/objects/Contact/fields/W9__c.field-meta.xml
<CustomField>
    <fullName>W9__c</fullName>
    <label>W9?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>