force-app/main/default/objects/Contact/fields/Wages_from_Employment__c.field-meta.xml
<CustomField>
    <fullName>Wages_from_Employment__c</fullName>
    <description>Does the Youth receive any wages from employment?</description>
    <label>Wages from Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>