force-app/main/default/objects/Contact/fields/Youth__c.field-meta.xml
<CustomField>
    <fullName>Youth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Guardian/Parent&apos;s Youth</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Youth</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>