force-app/main/default/objects/Contact/fields/Youth_Blind_Serious_Difficulty_Seeing__c.field-meta.xml
<CustomField>
    <fullName>Youth_Blind_Serious_Difficulty_Seeing__c</fullName>
    <inlineHelpText>Is the youth blind or have serious difficulty seeing?</inlineHelpText>
    <label>Youth Blind/Serious Difficulty Seeing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>