force-app/main/default/objects/Contact/fields/Youth_Deaf_Serious_Difficulty_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Youth_Deaf_Serious_Difficulty_Hearing__c</fullName>
    <inlineHelpText>Is the youth deaf or have serious difficulty hearing?</inlineHelpText>
    <label>Youth Deaf/Serious Difficulty Hearing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>