force-app/main/default/objects/Contact/fields/Youth_Involved_With_CPS_DHS__c.field-meta.xml
<CustomField>
    <fullName>Youth_Involved_With_CPS_DHS__c</fullName>
    <inlineHelpText>Does the youth have any current or former involvement with Child Protective Services/DHS?</inlineHelpText>
    <label>Youth Involved With CPS/DHS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>