force-app/main/default/objects/Contact/fields/Youth_Living_Lived_in_Foster_Care__c.field-meta.xml
<CustomField>
    <fullName>Youth_Living_Lived_in_Foster_Care__c</fullName>
    <label>Youth Living/Lived in Foster Care?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not under 30</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>