force-app/main/default/objects/Contact/fields/Youth_Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Youth_Medical_Conditions__c</fullName>
    <inlineHelpText>Does the youth have any medical conditions requiring treatment?</inlineHelpText>
    <label>Youth Medical Conditions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer Not To Say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>