force-app/main/default/objects/Contact/fields/Youth_Mental_Disability_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Youth_Mental_Disability_Diagnosis__c</fullName>
    <inlineHelpText>Has the youth ever received a developmental delay, intellectual disability, pervasive developmental disorder, and/or autism diagnosis?</inlineHelpText>
    <label>Youth Mental Disability Diagnosis?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>