force-app/main/default/objects/Contact/fields/Youth_Need_Support_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Youth_Need_Support_Assistance__c</fullName>
    <inlineHelpText>Does the youth need support or assistance?</inlineHelpText>
    <label>Youth Need Support/Assistance?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Medical assistance</fullName>
            </value>
            <value>
                <fullName>Medical or Dental Care</fullName>
            </value>
            <value>
                <fullName>Access to Food</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Mental health services</fullName>
            </value>
            <value>
                <fullName>Substance use services</fullName>
            </value>
            <value>
                <fullName>Service coordination or Support services</fullName>
            </value>
            <value>
                <fullName>Legal services</fullName>
            </value>
            <value>
                <fullName>Employment or Job development services</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Service coordination and Management</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>