force-app/main/default/objects/Contact/fields/Youth_Partner__c.field-meta.xml
<CustomField>
    <fullName>Youth_Partner__c</fullName>
    <label>Does the Youth&apos;s Partner Live With Them?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>