force-app/main/default/objects/Contact/fields/Youth_Received_Mental_Health_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Youth_Received_Mental_Health_Diagnosis__c</fullName>
    <inlineHelpText>Has the youth ever received a mental health diagnosis?</inlineHelpText>
    <label>Youth Received Mental Health Diagnosis?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>