force-app/main/default/objects/Contact/fields/Youth_Received_Payment_Card__c.field-meta.xml
<CustomField>
    <fullName>Youth_Received_Payment_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Youth Received Payment Card?</label>
    <type>Checkbox</type>
</CustomField>