force-app/main/default/objects/Contact/fields/Youth_s_Internet_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Youth_s_Internet_Connectivity__c</fullName>
    <inlineHelpText>What best describes the youth&apos;s internet connectivity?</inlineHelpText>
    <label>Youth&apos;s Internet Connectivity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Have access to the internet at home through a fixed connection e.g., DSL, fiber, cable, etc., satellite, fixed wireless</fullName>
            </value>
            <value>
                <fullName>Have access to the internet primarily through a phone</fullName>
            </value>
            <value>
                <fullName>Have access to the internet in public spaces e.g., library, businesses, school</fullName>
            </value>
            <value>
                <fullName>Do not have internet connectivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>