force-app/main/default/objects/Contact/recordTypes/Supervisor.recordType-meta.xml
<RecordType>
    <fullName>Supervisor</fullName>
    <active>true</active>
    <description>Contact at a Placement Site Account</description>
    <label>Supervisor</label>
</RecordType>