force-app/main/default/objects/Contact/validationRules/MobilePhone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhone_Validation</fullName>
    <active>true</active>
    <description>·       Area codes start with a number 2–9, followed by 0–8, and then any third digit.
·       The second group of three digits starts with a number 2–9, followed by any two digits.
·       The field must be all numbers
·       No 555 as exchange code</description>
    <errorConditionFormula>AND(
    NOT( ISBLANK(  MobilePhone  ) ),
    NOT(
        REGEX( MobilePhone , &quot;^(?!.*555\\d{4})[2-9][0-8]\\d[2-9]\\d{2}\\d{4}$&quot; )
    )
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>You must enter a valid phone number without dashes</errorMessage>
</ValidationRule>