force-app/main/default/objects/Contact/validationRules/Zip_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Validation</fullName>
    <active>true</active>
    <description>Require zip code to be 5 digits long</description>
    <errorConditionFormula>NOT(ISBLANK(MailingPostalCode)) &amp;&amp; NOT(REGEX(MailingPostalCode, &quot;^\\d{5}$&quot;))</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Zip Code must be 5 digits long</errorMessage>
</ValidationRule>