force-app/main/default/objects/Contact/listViews/Launchpad__Job_Seekers.listView-meta.xml
<ListView>
    <fullName>Launchpad__Job_Seekers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Launchpad__Stage__c</columns>
    <columns>Launchpad__Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Launchpad__Job_Seeker</value>
    </filters>
    <label>Job Seekers</label>
</ListView>