force-app/main/default/objects/Contact/listViews/Launchpad__My_Employer_Contacts.listView-meta.xml
<ListView>
    <fullName>Launchpad__My_Employer_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Launchpad__Employer</value>
    </filters>
    <label>My Employer Contacts</label>
</ListView>