force-app/main/default/objects/Contact/listViews/Launchpad__My_Young_Adults.listView-meta.xml
<ListView>
    <fullName>Launchpad__My_Young_Adults</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Launchpad__Stage__c</columns>
    <columns>Launchpad__Owner_Full_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Launchpad__Young_Adult</value>
    </filters>
    <label>My Young Adults</label>
</ListView>