force-app/main/default/objects/Contact/listViews/Launchpad__Partner.listView-meta.xml
<ListView>
    <fullName>Launchpad__Partner</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Launchpad__Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Launchpad__Partners</value>
    </filters>
    <label>Partner Contacts</label>
</ListView>