force-app/main/default/objects/Contact/listViews/Launchpad__Student_Contacts.listView-meta.xml
<ListView>
    <fullName>Launchpad__Student_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Launchpad__Case_Number__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Launchpad__Record_Type_List_Views__c</field>
        <operation>equals</operation>
        <value>Student</value>
    </filters>
    <label>Student Contacts</label>
</ListView>