force-app/main/default/objects/Contact/listViews/Launchpad__Young_Adults_Records.listView-meta.xml
<ListView>
    <fullName>Launchpad__Young_Adults_Records</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Launchpad__Stage__c</columns>
    <columns>Launchpad__Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Launchpad__Young_Adult</value>
    </filters>
    <label>Young Adult Contacts</label>
</ListView>