force-app/main/default/objects/Contact/listViews/Ready_for_Reassignment.listView-meta.xml
<ListView>
    <fullName>Ready_for_Reassignment</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_for_Reassignment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ready for Reassignment</label>
</ListView>